--- a/03HandCodingHTML/styles.css
+++ b/03HandCodingHTML/styles.css
@@ -13,6 +13,8 @@ a:hover{
     text-decoration: none;
 }
 
+
+
 img {
     margin: 1em;
 }
@@ -31,6 +33,10 @@ main {
     border: #45337b;
     border-radius: 10px;
     border-width: 10px;
+}
+
+main h1 {
+    padding: .4em;
 }
 
 h1 {
@@ -59,14 +65,26 @@ main li{
 
 main dt {
     color: #c1c7e7;
-    font-size: 20px;
-    font-weight: 400;
+    font-size: 25px;
+    font-weight: bold;
     margin: .7em;
+
 }
 main dd {
     color: #c1c7e7;
     margin: 1em 10px;
+    padding-left: 25px;
 }
+
+main ul {
+    list-style-type: circle;
+}
+
+main a {
+    padding: 0;
+}
+
+
 
 /* nav stuff here */
 
@@ -80,11 +98,54 @@ nav a{
     color: #ffa403;
 }
 
+
 nav ul{
     list-style-type: square;
     padding: .5rem 30px;
 }
 
+nav .active {
+    color: white;
+    background-color: #271d45;
+    border: 3px solid #271d45;
+    border-radius: 10px;
+
+}
+
+/* figure stuff here */
+figure figcaption{
+    color: #c1c7e7;
+}
+
+figure.wrapped{
+    float: right;
+    width: 40%;
+}
+
+figure.wrapped img {
+    width: 100%;
+    height: auto;
+}
+
+figure.wrapped figcaption{
+    text-align: center;
+    font-size: .7em;
+}
+
+div.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px 10px;
+}
+
+div.gallery figure {
+    margin: 0;
+}
+
+div.gallery figcaption {
+    text-align: center;
+    font-size: .8rem;
+}
 
 /* footer stuff here */
 footer{
@@ -99,6 +160,7 @@ footer a{
 footer a:hover {
     color: white;
 }
+
 
 
 
